k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${NAME}-web
spec:
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    role: ${NAME}-web
---
